Fix the background color of the code panel header when dark mode is off.

--- a/source/styles/CodePanel.scss
+++ b/source/styles/CodePanel.scss
@@ -20,7 +20,7 @@ div #codePanel.appPanel {
     grid-column: 1;
     grid-row: 1;
     z-index: 1;
-    background: hsl(210, 10%, 20%, 0.75);
+    background: var(--panel-overlay-background);
     display: flex;
     padding: 0.5rem;
 }
